--- a/index.html
+++ b/index.html
@@ -5,10 +5,32 @@
   </script>
 </head>
 <body>
-  <cast-media-player></cast-media-player>
+  <cast-media-player crossorigin=""></cast-media-player>
+  <iframe id="screencast"></iframe>
   
   <script>
-    cast.framework.CastReceiverContext.getInstance().start();
+    const context = cast.framework.CastReceiverContext.getInstance();
+    const playerManager = context.getPlayerManager();
+
+    playerManager.setMessageInterceptor(
+      cast.framework.messages.MessageType.LOAD, loadRequestData => {
+        const error = new cast.framework.messages.ErrorData(
+                        cast.framework.messages.ErrorType.LOAD_FAILED);
+        if (!loadRequestData.media) {
+          error.reason = cast.framework.messages.ErrorReason.INVALID_PARAM;
+          return error;
+        }
+
+        if (!loadRequestData.media.entity) {
+          return loadRequestData;
+        }
+
+        document.getElementById('screencast').src = loadRequestData.media.contentUrl;
+        
+        return loadRequestData;
+    });
+
+    context.start();
   </script>
 </body>
 </html>
