--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         }
 
         if (loadRequestData.media.entity == "screencast") {
-          document.getElementById("screencast").src = loadRequestData.media.contentUrl;
+          document.getElementById("screencast-iframe").src = loadRequestData.media.contentUrl;
           return null;
         }
         
