--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <cast-media-player crossorigin=""></cast-media-player>
-  <iframe class="screencast-iframe"></iframe>
+  <iframe id="screencast-iframe"></iframe>
   
   <script>
     const context = cast.framework.CastReceiverContext.getInstance();
