Image caching disabled

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     function _0x1b7e41() {
         var clientTag = (new Date)['getTime']();
-        _0x2816de["src"] = _0x58ae90 + ":" + _0x552577 + '/stream/' + clientTag;
+        _0x2816de["src"] = _0x58ae90 + ":" + _0x552577 + '/stream/image.png?dummy=' + clientTag;
     }
 
     function _0x8fcb5e() {
