--- a/index.html
+++ b/index.html
@@ -4,11 +4,28 @@
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Expires" content="0"/>
     <script type = "text/javascript" src = "//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"></script>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        .imgbox {
+            display: grid;
+            height: 100%;
+        }
+        .center-fit {
+            max-width: 100%;
+            max-height: 100vh;
+            margin: auto;
+        }
+    </style>
   </head>
   <body>
     <cast-media-player id="cast-player" crossorigin=""></cast-media-player>
-    <img id="mirrorImage"/>
-    <div id="startup">Start broadcast first</div>
+
+    <div class="imgbox">
+      <img class="center-fit" id="mirrorImage"/>
+    </div>
 
     <script type="text/javascript">
     var _0x2816de = document["getElementById"]('mirrorImage');
