--- a/index.html
+++ b/index.html
@@ -28,21 +28,18 @@
     </div>
 
     <script type="text/javascript">
-    var _0x2816de = document["getElementById"]('mirrorImage');
-    var _0x103dc6 = document['getElementById']('startup');
+    var _0x2816de = document['getElementById']('mirrorImage');
     var _0x58ae90 = "ip-address";
 
     var _0x552577 = '5005';
     _0x354e3a();
     document['addEventListener']('DOMContentLoaded', function() {
         _0x2816de['onload'] = function() {
-            _0x103dc6['style']['visibility'] = 'hidden';
             _0x2816de['style']['visibility'] = 'visible';
             _0x1b7e41();
         };
         _0x2816de["onerror"] = function() {
             _0x2816de['style']['visibility'] = "hidden";
-            _0x103dc6['style']['visibility'] = 'visible';
             setTimeout(function() {
                 _0x1b7e41();
             }, 1000);
