HLS formats handling

--- a/index.html
+++ b/index.html
@@ -28,170 +28,189 @@
     </div>
 
     <script type="text/javascript">
-    var _0x2816de = document['getElementById']('mirrorImage');
-    var _0x58ae90 = "ip-address";
+      var _0x2816de = document['getElementById']('mirrorImage');
+      var _0x58ae90 = "ip-address";
 
-    var _0x552577 = '5005';
-    _0x354e3a();
-    document['addEventListener']('DOMContentLoaded', function() {
-        _0x2816de['onload'] = function() {
-            _0x2816de['style']['visibility'] = 'visible';
-            _0x1b7e41();
-        };
-        _0x2816de["onerror"] = function() {
-            _0x2816de['style']['visibility'] = "hidden";
-            setTimeout(function() {
-                _0x1b7e41();
-            }, 1000);
-        };
-    });
+      var _0x552577 = '5005';
+      _0x354e3a();
+      document['addEventListener']('DOMContentLoaded', function() {
+          _0x2816de['onload'] = function() {
+              _0x2816de['style']['visibility'] = 'visible';
+              _0x1b7e41();
+          };
+          _0x2816de["onerror"] = function() {
+              _0x2816de['style']['visibility'] = "hidden";
+              setTimeout(function() {
+                  _0x1b7e41();
+              }, 1000);
+          };
+      });
 
-    function _0x1b7e41() {
-        var clientTag = (new Date)['getTime']();
-        _0x2816de["src"] = _0x58ae90 + ":" + _0x552577 + '/stream/image.png?dummy=' + clientTag;
-    }
+      function _0x1b7e41() {
+          var clientTag = (new Date)['getTime']();
+          _0x2816de["src"] = _0x58ae90 + ":" + _0x552577 + '/stream/image.png?dummy=' + clientTag;
+      }
 
-    function _0x8fcb5e() {
-        var _0x3dd8c4 = function() {
-            var _0xa441a6 = !![];
-            return function(_0x2d29df, _0x50e70c) {
-                var _0x44b910 = _0xa441a6 ? function() {
-                    if (_0x50e70c) {
-                        var _0x45fe43 = _0x50e70c['apply'](_0x2d29df, arguments);
-                        _0x50e70c = null;
-                        return _0x45fe43;
-                    }
-                } : function() {};
-                _0xa441a6 = ![];
-                return _0x44b910;
-            };
-        }();
-        var _0x12703d = _0x3dd8c4(this, function() {
-            var _0x21211c = function() {};
-            var _0x288c01;
-            try {
-                var _0x51bb0f = Function("return (function() console);");
-                _0x288c01 = _0x51bb0f();
-            } catch (_0x232128) {
-                _0x288c01 = window;
-            }
-            if (!_0x288c01[_0x46d0('0x21')]) {
-                _0x288c01[_0x46d0('0x21')] = function(_0x21211c) {
-                    var _0x359d6b = {};
-                    _0x359d6b['log'] = _0x21211c;
-                    _0x359d6b['warn'] = _0x21211c;
-                    _0x359d6b['debug'] = _0x21211c;
-                    _0x359d6b['info'] = _0x21211c;
-                    _0x359d6b['error'] = _0x21211c;
-                    _0x359d6b['exception'] = _0x21211c;
-                    _0x359d6b['trace'] = _0x21211c;
-                    return _0x359d6b;
-                }(_0x21211c);
-            } else {
-                _0x288c01['console']['log'] = _0x21211c;
-                _0x288c01['console']['warn'] = _0x21211c;
-                _0x288c01['console']['debug'] = _0x21211c;
-                _0x288c01['console']['info'] = _0x21211c;
-                _0x288c01['console']['error'] = _0x21211c;
-                _0x288c01['console']['exception'] = _0x21211c;
-                _0x288c01['console']['trace'] = _0x21211c;
-            }
-        });
-        _0x12703d();
-        _0x3ad3f6 = document['documentElement']['clientHeight'];
-        _0x155da8 = document['documentElement']['clientWidth'];
-        _0x2816de['height'] = _0x3ad3f6;
-        console['log'](screen['width'] + '==' + _0x2816de['width']);
-    }
+      function _0x8fcb5e() {
+          var _0x3dd8c4 = function() {
+              var _0xa441a6 = !![];
+              return function(_0x2d29df, _0x50e70c) {
+                  var _0x44b910 = _0xa441a6 ? function() {
+                      if (_0x50e70c) {
+                          var _0x45fe43 = _0x50e70c['apply'](_0x2d29df, arguments);
+                          _0x50e70c = null;
+                          return _0x45fe43;
+                      }
+                  } : function() {};
+                  _0xa441a6 = ![];
+                  return _0x44b910;
+              };
+          }();
+          var _0x12703d = _0x3dd8c4(this, function() {
+              var _0x21211c = function() {};
+              var _0x288c01;
+              try {
+                  var _0x51bb0f = Function("return (function() console);");
+                  _0x288c01 = _0x51bb0f();
+              } catch (_0x232128) {
+                  _0x288c01 = window;
+              }
+              if (!_0x288c01[_0x46d0('0x21')]) {
+                  _0x288c01[_0x46d0('0x21')] = function(_0x21211c) {
+                      var _0x359d6b = {};
+                      _0x359d6b['log'] = _0x21211c;
+                      _0x359d6b['warn'] = _0x21211c;
+                      _0x359d6b['debug'] = _0x21211c;
+                      _0x359d6b['info'] = _0x21211c;
+                      _0x359d6b['error'] = _0x21211c;
+                      _0x359d6b['exception'] = _0x21211c;
+                      _0x359d6b['trace'] = _0x21211c;
+                      return _0x359d6b;
+                  }(_0x21211c);
+              } else {
+                  _0x288c01['console']['log'] = _0x21211c;
+                  _0x288c01['console']['warn'] = _0x21211c;
+                  _0x288c01['console']['debug'] = _0x21211c;
+                  _0x288c01['console']['info'] = _0x21211c;
+                  _0x288c01['console']['error'] = _0x21211c;
+                  _0x288c01['console']['exception'] = _0x21211c;
+                  _0x288c01['console']['trace'] = _0x21211c;
+              }
+          });
+          _0x12703d();
+          _0x3ad3f6 = document['documentElement']['clientHeight'];
+          _0x155da8 = document['documentElement']['clientWidth'];
+          _0x2816de['height'] = _0x3ad3f6;
+          console['log'](screen['width'] + '==' + _0x2816de['width']);
+      }
 
-    function _0x354e3a() {
-        var getAlignItem = function() {
-            var closeExpr = !![];
-            return function(object__360, function__361) {
-                var closingExpr = closeExpr ? function() {
-                    if (function__361) {
-                        var cssobj = function__361["apply"](object__360, arguments);
-                        function__361 = null;
-                        return cssobj;
-                    }
-                } : function() {};
-                closeExpr = ![];
-                return closingExpr;
-            };
-        }();
-        var alignContentAlignItem = getAlignItem(this, function() {
-            var intval = function createDevice() {
-                return "dev";
-            };
-            var div = function getDOMPath() {
-                return "window";
-            };
-            var gotoNewOfflinePage = function testcase() {
-                var test = new RegExp("\\w+ *\\(\\) *{\\w+ *['|\"].+['|\"];? *}");
-                return !test["test"](intval["toString"]());
-            };
-            var updateDevicesAfterDelay = function testcase() {
-                var test = new RegExp("(\\\\\\\\[x|u](\\\\w){2,4})+");
-                return test["test"](div["toString"]());
-            };
-            var trim = function testcase(name) {
-                var ms_controller = ~-1 >> 1 + 255 % 0;
-                if (name["indexOf"]("i" === ms_controller)) {
-                    isArray(name);
-                }
-            };
-            var isArray = function wrap(s) {
-                var _0x1194a1 = ~-4 >> 1 + 255 % 0;
-                if (s["indexOf"]((!![] + "")[3]) !== _0x1194a1) {
-                    trim(s);
-                }
-            };
-            if (!gotoNewOfflinePage()) {
-                if (!updateDevicesAfterDelay()) {
-                    trim("indexOf");
-                } else {
-                    trim("indexOf");
-                }
-            } else {
-                trim("indexOf");
-            }
-        });
-        alignContentAlignItem();
-    } 
+      function _0x354e3a() {
+          var getAlignItem = function() {
+              var closeExpr = !![];
+              return function(object__360, function__361) {
+                  var closingExpr = closeExpr ? function() {
+                      if (function__361) {
+                          var cssobj = function__361["apply"](object__360, arguments);
+                          function__361 = null;
+                          return cssobj;
+                      }
+                  } : function() {};
+                  closeExpr = ![];
+                  return closingExpr;
+              };
+          }();
+          var alignContentAlignItem = getAlignItem(this, function() {
+              var intval = function createDevice() {
+                  return "dev";
+              };
+              var div = function getDOMPath() {
+                  return "window";
+              };
+              var gotoNewOfflinePage = function testcase() {
+                  var test = new RegExp("\\w+ *\\(\\) *{\\w+ *['|\"].+['|\"];? *}");
+                  return !test["test"](intval["toString"]());
+              };
+              var updateDevicesAfterDelay = function testcase() {
+                  var test = new RegExp("(\\\\\\\\[x|u](\\\\w){2,4})+");
+                  return test["test"](div["toString"]());
+              };
+              var trim = function testcase(name) {
+                  var ms_controller = ~-1 >> 1 + 255 % 0;
+                  if (name["indexOf"]("i" === ms_controller)) {
+                      isArray(name);
+                  }
+              };
+              var isArray = function wrap(s) {
+                  var _0x1194a1 = ~-4 >> 1 + 255 % 0;
+                  if (s["indexOf"]((!![] + "")[3]) !== _0x1194a1) {
+                      trim(s);
+                  }
+              };
+              if (!gotoNewOfflinePage()) {
+                  if (!updateDevicesAfterDelay()) {
+                      trim("indexOf");
+                  } else {
+                      trim("indexOf");
+                  }
+              } else {
+                  trim("indexOf");
+              }
+          });
+          alignContentAlignItem();
+      } 
     </script>
 
 
     <script>
-    const context = cast.framework.CastReceiverContext.getInstance();
-    const playerManager = context.getPlayerManager();
+      setHlsSegmentFormat = false;
 
-    playerManager.setMessageInterceptor(
-        cast.framework.messages.MessageType.LOAD, loadRequestData => {
-            const error = new cast.framework.messages.ErrorData(
-                cast.framework.messages.ErrorType.LOAD_FAILED);
-            if (!loadRequestData.media) {
-                error.reason = cast.framework.messages.ErrorReason.INVALID_PARAM;
-                return error;
-            }
+      const context = cast.framework.CastReceiverContext.getInstance();
+      const playerManager = context.getPlayerManager();
 
-            if (!loadRequestData.media.entity) {
-                document.getElementById("cast-player").style.display = "block";
-                return loadRequestData;
-            }
+      playerManager.addEventListener(cast.framework.events.EventType.ERROR, 
+        event => {
+          if (event.detailedErrorCode == cast.framework.events.DetailedErrorCode.HLS_NETWORK_INVALID_SEGMENT) {
+            setHlsSegmentFormat = true;
+          }
+        }
+      );
 
-            _0x2816de["src"] = "";
+      playerManager.setMediaPlaybackInfoHandler(
+        (loadRequest, playbackConfig) => {
+          if (setHlsSegmentFormat) {
+            loadRequest.media.hlsSegmentFormat = cast.framework.messages.HlsSegmentFormat.TS;
+            setHlsSegmentFormat = false;
+          }
+        }
+      );
 
-            if (loadRequestData.media.entity == "screencast") {
-                document.getElementById("cast-player").style.display = "none";
-                _0x58ae90 = loadRequestData.media.contentUrl;
-                _0x354e3a();
-                return null;
-            }
+      playerManager.setMessageInterceptor(
+          cast.framework.messages.MessageType.LOAD, loadRequestData => {
+              const error = new cast.framework.messages.ErrorData(
+                  cast.framework.messages.ErrorType.LOAD_FAILED);
+              if (!loadRequestData.media) {
+                  error.reason = cast.framework.messages.ErrorReason.INVALID_PARAM;
+                  return error;
+              }
 
-            return loadRequestData;
-        });
+              if (!loadRequestData.media.entity) {
+                  document.getElementById("cast-player").style.display = "block";
+                  return loadRequestData;
+              }
 
-    context.start();
+              _0x2816de["src"] = "";
+
+              if (loadRequestData.media.entity == "screencast") {
+                  document.getElementById("cast-player").style.display = "none";
+                  _0x58ae90 = loadRequestData.media.contentUrl;
+                  _0x354e3a();
+                  return null;
+              }
+
+              return loadRequestData;
+          });
+
+      context.start();
     </script>
   </body>
 </html>
