Playback handler fix

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
             loadRequest.media.hlsSegmentFormat = cast.framework.messages.HlsSegmentFormat.TS;
             setHlsSegmentFormat = false;
           }
+          return playbackConfig;
         }
       );
 
