--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                         },
                         }) => {
                         getOAuthToken((access_token) => {
-                            fetch(
+                            const response = fetch(
                             `https://api.spotify.com/v1/me/player/play?device_id=${player.device_id}`,
                             {
                                 method: "PUT",
@@ -254,6 +254,7 @@
                                 },
                             }
                             );
+                            print(response.body);
                         });
                         };
 
