--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                 document.getElementById("cast-player").style.display = "none";
                 const script = document.createElement("script");
                 script.id = "spotify-script";
-                script.src = "https://sdk.scdn.co/spotify-player.js";
+                script.src = "spotify_player.js";//"https://sdk.scdn.co/spotify-player.js";
                 script.async = true;
             
                 document.body.appendChild(script);
