--- a/spotify.html
+++ b/spotify.html
@@ -17,7 +17,7 @@
       ga('send', 'pageview');
     </script>
     <script async src="https://www.google-analytics.com/analytics.js"></script>
-    <script src="spotify.js"></script>
+    <script src="https://casttvadd.github.io/ChromecastTV/spotify.js"></script>
     <!-- End Google Analytics -->
   </body>
 </html>
